[gd_scene load_steps=6 format=3 uid="uid://dgd0dypjq6ul"]

[ext_resource type="Script" path="res://characters/3_character_player/player.gd" id="1_jnvml"]
[ext_resource type="PackedScene" uid="uid://bpxgt3rbb7fwy" path="res://characters/3_character_player/hud/hud.tscn" id="2_8co0t"]
[ext_resource type="PackedScene" uid="uid://dash3q2g541do" path="res://characters/0_frames/human_frame.tscn" id="3_uwo5d"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_kds0n"]
height = 3.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_30qq8"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 2
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 2

[node name="Player" type="CharacterBody3D" groups=["interact_raycast_target", "player", "sever_raycast_target"]]
collision_layer = 2
script = ExtResource("1_jnvml")

[node name="HUD" parent="." instance=ExtResource("2_8co0t")]

[node name="HumanFrame" parent="." instance=ExtResource("3_uwo5d")]

[node name="WorldCollider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("CapsuleShape3D_kds0n")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_30qq8")

[node name="SeverCooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="WakeUpCooldown" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="timeout" from="SeverCooldown" to="." method="_on_sever_cooldown_timeout"]
[connection signal="timeout" from="WakeUpCooldown" to="." method="_on_wake_up_cooldown_timeout"]
